@@ -58,8 +58,7 @@ void BannerInit();
 TileElement* BannerGetTileElement(BannerIndex bannerIndex);
 WallElement* BannerGetScrollingWallTileElement(BannerIndex bannerIndex);
 RideId BannerGetClosestRideIndex(const CoordsXYZ& mapPos);
-void BannerResetBrokenIndex();
-void BannerFixDuplicates();
+void BannerApplyFixes();
 void UnlinkAllRideBanners();
 void UnlinkAllBannersForRide(RideId rideId);
 Banner* GetBanner(BannerIndex id);
